# Web_Notes

./: pyproject.toml
backend/: .gitignore  pyproject.toml
backend/apps/common/: utils.py
backend/apps/common/mixins/: admin.py  managers.py  models.py  serializers.py
backend/apps/notes/: admin.py  models.py
backend/apps/notes/api/: serializers.py  urls.py  views.py
backend/apps/notes/migrations/: 0001_initial.py  0002_folder_note_folder.py
backend/apps/users/: admin.py  forms.py  managers.py  models.py  serializers.py  signals.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
backend/backend/settings/: base.py  development.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  store.js
frontend/src/actions/: auth.js
frontend/src/components/: Navbar.js
frontend/src/components/Home/: ContextMenu.css  ContextMenu.jsx  MoveModal.jsx  MoveModal.styled.jsx  TreeMenu.jsx  TreeMenu.styled.jsx  TreeNode.jsx  TreeNode.styled.jsx
frontend/src/containers/: Activate.js  Home.js  Login.js  ResetPassword.js  ResetPasswordConfirm.js
frontend/src/context/: AuthContext.js
frontend/src/hocs/: Layout.js
frontend/src/pages/: Home.jsx  Home.styled.jsx  Login.jsx  Login.styled.jsx  ResetPassword.jsx  ResetPassword.styled.jsx  ResetPasswordConfirm.jsx  ResetPasswordConfirm.styled.jsx  Signup.jsx  Signup.styled.jsx
frontend/src/reducers/: auth.js
