[tool.poetry]
name = "web-notes"
version = "0.1.0"
description = "This is Project for Making Notes"
authors = ["Madjar Evan <evanmadjar@gmail.com>"]
readme = "README.md"
packages = [{include = "web_notes"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
