[tool.poetry]
name = "web-notes"
version = "0.1.0"
description = "This is Project for Making Notes"
authors = ["Madjar Evan <evanmadjar@gmail.com>"]
readme = "README.md"
packages = [{include = "web_notes"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
drf-yasg = "^1.21.7"
django-environ = "^0.11.2"
djangorestframework-simplejwt = "^5.3.1"
pydantic = "^2.7.1"
djoser = "^2.2.2"
django-jazzmin = "^3.0.0"
django-markdownx = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
